--- a/articles/54c50ba3163f17.md
+++ b/articles/54c50ba3163f17.md
@@ -3,7 +3,7 @@ title: "test"
 emoji: "🐡"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [Go, Discord]
-published: false
+published: True
 ---
 # 背景
 ここ最近 discord をよく用いるようになりました（仲間内だと LINE より discord のほうが何かと便利）．そんな便利な discord ですが，どんな仕組みで動いているのか，どこまで遊べそうかが気になったので， discord Bot として実装しながら遊んでみました．この記事は，その際のメモです．
