--- a/articles/54c50ba3163f17.md
+++ b/articles/54c50ba3163f17.md
@@ -20,7 +20,8 @@ https://www.paltek.co.jp/techblog/techinfo/230201_01
 特に音声 (Audio) については，一般的に [Opus](https://ja.wikipedia.org/wiki/Opus_(%E9%9F%B3%E5%A3%B0%E5%9C%A7%E7%B8%AE)) という形式に圧縮されて送受信されます．
 
 # Discord ボイスチャットの仕組み
-discord のボイスチャットの情報は，`VoiceConnection` という構造体で管理されている．中身は以下．
+discord のボイスチャットの情報は，`VoiceConnection` という構造体で管理されています．
+中身は以下．
 >type VoiceConnection struct {
 >	sync.RWMutex
 >
@@ -38,7 +39,7 @@ discord のボイスチャットの情報は，`VoiceConnection` という構造
 
 https://pkg.go.dev/github.com/bwmarrin/discordgo#section-readme
 
-これを実際に生成する関数は次のようになる．
+これを実際に生成する関数は次のようになります．
 ```go
 func onMessageCreate(s *discordgo.Session, m *discordgo.MessageCreate) {
     c, err := s.State.Channel(m.ChannelID)
@@ -50,18 +51,18 @@ func onMessageCreate(s *discordgo.Session, m *discordgo.MessageCreate) {
 }
 ```
 
-また，この構造体の中にある `OpusSend`， `OpusRecv` というのが，webRTC によって送受信されるOpusの変数である．
-ちなみに，`chan` とあるのは，ポインタ変数を表している．
+また，この構造体の中にある `OpusSend`， `OpusRecv` というのが，webRTC によって送受信されるOpusの変数です．
+ちなみに，`chan` とあるのは，ポインタ変数を表しています．
 
-実際に bot が音声を送受信する場合には，何かしらの変換（ノイズ除去など）を行うことになる．しかし，Opus は圧縮形式であるため，そのままでは操作ができない．
-そのため，Opus をデコードしPCM形式とすることで任意の操作を可能にし，それをまたOpusにエンコードしなおす．
-このコーデックに関する操作には以下を用いた．
+実際に bot が音声を送受信する場合には，何かしらの変換（ノイズ除去など）を行うことになります．しかし，Opus は圧縮形式であるため，そのままでは操作ができません．
+そのため，Opus をデコードしPCM形式とすることで任意の操作を可能にし，それをまたOpusにエンコードしなおします．
+このコーデックに関する操作には以下を用いました．
 https://github.com/hraban/opus
 
 # 実験と結果
-実験として，ユーザからボイスチャットに入力された音声を検出し，デコード及びエンコードしたのちにそのまま送り返すecho機能を実装した．
-使用したコードは付録として記事の最後に張り付けている．
-結果としては，コーデックの変換をしない場合にはクリアに聞こえたが，コーデックした場合には高速に再生されており，どこかが誤っているのだが原因はいまだ不明である．（誰か助けてクレメンス）
+実験として，ユーザからボイスチャットに入力された音声を検出し，デコード及びエンコードしたのちにそのまま送り返すecho機能を実装しました．
+使用したコードは付録として記事の最後に張り付けています．
+結果としては，コーデックの変換をしない場合にはクリアに聞こえたが，コーデックした場合には高速に再生されており，どこかが誤っているのだが原因はいまだ不明です．（誰か助けてクレメンス）
 
 # まとめ
 Discord の音声通信についてメモしました．今後は，音声のフーリエ変換と可視化を進め，音声符号化あたりについて勉強したいと思っています．
