--- a/articles/e2e13e3b9d43d7.md
+++ b/articles/e2e13e3b9d43d7.md
@@ -3,7 +3,7 @@ title: "確率○○　まとめ"
 emoji: "🔥"
 type: "idea" # tech: 技術記事 / idea: アイデア
 topics: ["確率","測度"]
-published: false
+published: True
 ---
 
 # はじめに
